--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
